--- a/src/app/features/about/card-about/card-about.component.html
+++ b/src/app/features/about/card-about/card-about.component.html
@@ -1,7 +1,7 @@
 <div fxLayoutAlign="center center">
   <mat-card class="mat-elevation-z4" color="primary">
     <mat-card-header  fxLayoutAlign="center center">
-      <img class="img-user mat-elevation-z4" src="./../../../../assets/img/circle-cropped.png">
+      <img class="img-user mat-elevation-z4" src="assets/img/circle-cropped.png">
       <mat-card-title>
         <h1> Full stack developer </h1>
       </mat-card-title>
