--- a/src/app/features/about/card-about/card-about.component.html
+++ b/src/app/features/about/card-about/card-about.component.html
@@ -10,43 +10,32 @@
 
     <mat-card-content>
     <p>Sobre mi, amet consectetur adipisicing elit. Minima quia, commodi labore omnis neque culpa esse cum. Atque exercitationem soluta officiis libero, unde assumenda voluptate iure asperiores, fugiat repudiandae ullam?</p>
+    <h2>Experience</h2>
     <mat-accordion class="mat-elevation-z4">
       <mat-expansion-panel  (opened)="panelOpenState = true"
                           (closed)="panelOpenState = false">
       <mat-expansion-panel-header>
       <mat-panel-title class="text-bold">
-        Experience
+        Boream
       </mat-panel-title>
       <mat-panel-description>
-        Currently I am
+        <p>Frontend Developer 2020-2020</p>
       </mat-panel-description>
       </mat-expansion-panel-header>
-        <mat-accordion class="mat-elevation-z4">
-          <mat-expansion-panel  (opened)="panelOpenState = true"
-                              (closed)="panelOpenState = false">
-          <mat-expansion-panel-header>
-          <mat-panel-title class="text-bold">
-            Boream
-          </mat-panel-title>
-          <mat-panel-description>
-            <p>Frontend Developer 2020-2020</p>
-          </mat-panel-description>
-          </mat-expansion-panel-header>
-          <p>Web development bootcamp using HTML5, Javascript Css, Sass, Git, Angular8, Koa, Express,
-            Node.js, Karma, Jasmine, Mongodb and others.
-          </p>
-          <p>Clone: Web App red social para subir y descargar imágenes.
-          </p>
-          <p>
-            -Front desarrollado con Html5, Sass, Angular9 ,
-          </p>
-          <p>
-            -Back desarrollado con Srtrapi(cms), con test unitarios utilizando Jasmine.js y con test End-to-End con Cypress.js.
-          </p>
-          </mat-expansion-panel>
-        </mat-accordion>
+      <p>Web development bootcamp using HTML5, Javascript Css, Sass, Git, Angular8, Koa, Express,
+        Node.js, Karma, Jasmine, Mongodb and others.
+      </p>
+      <p>Clone: Web App red social para subir y descargar imágenes.
+      </p>
+      <p>
+        -Front desarrollado con Html5, Sass, Angular9 ,
+      </p>
+      <p>
+        -Back desarrollado con Srtrapi(cms), con test unitarios utilizando Jasmine.js y con test End-to-End con Cypress.js.
+      </p>
       </mat-expansion-panel>
     </mat-accordion>
+    <h2>Education</h2>
     <mat-accordion class="mat-elevation-z4">
       <mat-expansion-panel  (opened)="panelOpenState = true"
                           (closed)="panelOpenState = false">
@@ -61,6 +50,7 @@
         <p>I'm visible because I am open</p>
       </mat-expansion-panel>
     </mat-accordion>
+    <h2>My interests</h2>
     <mat-accordion class="mat-elevation-z4">
       <mat-expansion-panel  (opened)="panelOpenState = true"
                           (closed)="panelOpenState = false">
@@ -75,6 +65,7 @@
         <p>I'm visible because I am open</p>
       </mat-expansion-panel>
     </mat-accordion>
+    <h2>My hobbies</h2>
     <mat-accordion class="mat-elevation-z4">
       <mat-expansion-panel  (opened)="panelOpenState = true"
                           (closed)="panelOpenState = false">
