--- a/src/app/features/projects/card-projects/card-projects.component.html
+++ b/src/app/features/projects/card-projects/card-projects.component.html
@@ -1,5 +1,5 @@
-<div class="content" fxLayout="row wrap" fxLayoutGap="20px grid" >
-  <div [fxFlex]="(100/gridColumns) + '%'" fxFlex.xs="100%" fxFlex.sm="50%" *ngFor="let num of [1,2,3,4,5,6,7]">
+<div [@cardAnimation]="cards.length" class="content" fxLayout="row wrap" fxLayoutGap="20px grid" >
+  <div [fxFlex]="(100/gridColumns) + '%'" fxFlex.xs="100%" fxFlex.sm="50%" *ngFor="let num of cards">
     <mat-card class="mat-elevation-z4" >
       <mat-card-header>
         <mat-card-title>Project {{num}}</mat-card-title>
