Update title about-component

--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -49,9 +49,9 @@ $candy-app-dark-theme: mat-dark-theme((
 }
 
 .text-primary {
-  font-size: 20px;
+  font-size: 40px;
   font-weight: 700;
-  color: #fb8c00;
+  color: #aa00ff;
   text-transform: uppercase;
 }
 
