--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<div id="tsparticles">
+<app-header></app-header>
+<main  [@routerTransition]="getState(o)">
+  <div id="tsparticles" class="particles">
 
-</div>
-<main [@routerTransition]="getState(o)">
-  <router-outlet #o="outlet"></router-outlet>
+  </div>
+  <router-outlet #o="outlet"> </router-outlet>
 </main>
