--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,13 @@
 #tsparticles {
   height: 100vh;
   width: 100%;
+}
+
+.particles {
   position: fixed;
   z-index: 0;
-  padding-top: 64px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background: none;
 }
