--- a/src/app/shared/components/cover/cover.component.scss
+++ b/src/app/shared/components/cover/cover.component.scss
@@ -1,11 +1,9 @@
 .cover {
   height: 100vh;
   padding: 75px 15px;
-}
-.container {
   display: flex;
-  justify-content: center;
-  margin: 20px;
+  flex-direction: column;
+  align-items: center;
 }
 
 .container-icons {
@@ -17,7 +15,8 @@
 .mat-card {
   max-width: 1000px;
   margin: 0 5px;
-  padding: 10px 15px;
+  padding: 50px;
+  // background-color: ;
 }
 
 .mat-button-base {
