All texts changed to Spanish

--- a/src/app/features/projects/grid-projects/grid-projects.component.html
+++ b/src/app/features/projects/grid-projects/grid-projects.component.html
@@ -5,7 +5,7 @@
 
 <section class="mat-drawer-container">
   <mat-toolbar fxLayoutAlign="center center" fxLayout="column" color="accent">
-    <span>Works</span>
+    <span>Proyectos</span>
   </mat-toolbar>
   <app-card-projects></app-card-projects>
 </section>
