--- a/src/app/features/about/card-about/card-about.component.html
+++ b/src/app/features/about/card-about/card-about.component.html
@@ -10,8 +10,8 @@
 
     <mat-card-content>
     <p>Sobre mi, amet consectetur adipisicing elit. Minima quia, commodi labore omnis neque culpa esse cum. Atque exercitationem soluta officiis libero, unde assumenda voluptate iure asperiores, fugiat repudiandae ullam?</p>
-    <h2>Experience</h2>
-    <mat-accordion @aboutAnimation class="mat-elevation-z4">
+    <h2>Experiencia</h2>
+    <mat-accordion class="mat-elevation-z4">
       <mat-expansion-panel  (opened)="panelOpenState = true"
                             (closed)="panelOpenState = false">
       <mat-expansion-panel-header>
@@ -35,7 +35,7 @@
       </p>
       </mat-expansion-panel>
     </mat-accordion>
-    <h2>Education</h2>
+    <h2>Educacion</h2>
     <mat-accordion class="mat-elevation-z4">
       <mat-expansion-panel  (opened)="panelOpenState = true"
                           (closed)="panelOpenState = false">
@@ -50,7 +50,7 @@
         <p>I'm visible because I am open</p>
       </mat-expansion-panel>
     </mat-accordion>
-    <h2>My interests</h2>
+    <h2>Mis intereses</h2>
     <mat-accordion class="mat-elevation-z4">
       <mat-expansion-panel  (opened)="panelOpenState = true"
                           (closed)="panelOpenState = false">
@@ -65,7 +65,7 @@
         <p>I'm visible because I am open</p>
       </mat-expansion-panel>
     </mat-accordion>
-    <h2>My hobbies</h2>
+    <h2>Mis hobbies</h2>
     <mat-accordion class="mat-elevation-z4">
       <mat-expansion-panel  (opened)="panelOpenState = true"
                           (closed)="panelOpenState = false">
