All texts changed to Spanish

--- a/src/app/shared/components/cover/cover.component.html
+++ b/src/app/shared/components/cover/cover.component.html
@@ -5,13 +5,13 @@
           <span class="text-primary"> David  seco diaz</span>
         </mat-card-title>
 
-      <mat-card-subtitle>Full Stack JS developer</mat-card-subtitle>
+      <mat-card-subtitle>Desarrolador Full Stack JS </mat-card-subtitle>
     </mat-card-header>
       <mat-card-content>
         <span>Frontend:</span>  Html, Css, Sass, Javascript, Angular, Vue.
       </mat-card-content>
       <mat-card-content>
-        Libraries: Three.js, Rxjs, Particles.js,
+        Librerias: Three.js, Rxjs, Particles.js,
       </mat-card-content>
       <mat-card-content>
         UI: A-Material, Bootstrap, Quasar.
@@ -20,13 +20,13 @@
         Backend: Node.js, Koa, Express, Mongodb.
       </mat-card-content>
       <mat-card-content>
-        Testing: Karma, Cypress.
+        Testing, Cypress.
       </mat-card-content>
       <mat-card-content>
-        Others: Firebase, Digital Ocean.
+        Otros: Firebase, Digital Ocean.
       </mat-card-content>
       <mat-card-content>
-        Tools: Git, Visual Studio Code, Figma, Trello, Jyra,
+        Herramientas: Git, Visual Studio Code, Figma, Trello, Jyra,
       </mat-card-content>
     </mat-card>
   <div class="container-icons">
