Update styles and added preload modules

--- a/src/app/features/projects/card-projects/card-projects.component.html
+++ b/src/app/features/projects/card-projects/card-projects.component.html
@@ -4,7 +4,7 @@
       <mat-card-header>
         <mat-card-title>Proyecto {{num}}</mat-card-title>
       </mat-card-header>
-      <img mat-card-image src="assets/img/9.png">
+      <img mat-card-image src="assets/img/print3d.png">
       <mat-card-content>
         <h4>Creado con:</h4>
         <div fxLayout="row wrap">
