--- a/src/app/features/projects/grid-projects/grid-projects.component.scss
+++ b/src/app/features/projects/grid-projects/grid-projects.component.scss
@@ -1,5 +1,8 @@
 .mat-drawer-container {
-  padding: 80px;
+  padding: 50px;
+  @media (min-width: 768px)  {
+      padding: 80px;
+    }
 }
 
 .mat-toolbar {
