--- a/src/app/shared/components/cover/cover.component.html
+++ b/src/app/shared/components/cover/cover.component.html
@@ -17,7 +17,7 @@
         UI: A-Material, Bootstrap, Quasar.
       </mat-card-content>
       <mat-card-content>
-        Backend: Node.js, Koa, Express, Mongodb.
+        Backend: Node.js, Koa, Express, Mongodb, Strapi .
       </mat-card-content>
       <mat-card-content>
         Testing, Cypress.
