Added global styles

--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -51,7 +51,7 @@ $candy-app-dark-theme: mat-dark-theme((
 .text-primary {
   font-size: 40px;
   font-weight: 700;
-  color: #aa00ff;
+  color: #69f0ae;
   text-transform: uppercase;
   @media (max-width: 768px) {
       font-size: 30px;
