--- a/src/app/shared/components/cover/cover.component.html
+++ b/src/app/shared/components/cover/cover.component.html
@@ -1,58 +1,50 @@
 <section class="cover mat-drawer-container mat-typography">
-    <mat-card class="card"  [class.mat-elevation-z4]="isActive">
+  <div >
+    <mat-card   class="mat-elevation-z4" color="primary">
       <mat-card-header>
         <mat-card-title fxLayoutAlign="center center">
           <img class="img-user mat-elevation-z4" src="assets/img/circle-cropped.png">
-          <span class="text-primary"> David  seco diaz</span>
+          <h1 class="text-primary"> David  seco diaz</h1>
         </mat-card-title>
       <mat-card-subtitle>Desarrolador Front-end</mat-card-subtitle>
     </mat-card-header>
-      <mat-card-content>
-        <p>
-          Hola soy David, desarrollador Front-end establecido en Madrid.
-          En los ultimos años me he formado en desarrollo de videojuegos donde aprendi modelado 3d,
-          texturizado, animacion y como no programacion en C# para Unity. Aqui fue donde me di cuenta
-          que el tiempo desaparecia cuando me involucraba en resolver un problema.
-          Entonces hace año y poco empeze a formame en App/Web y hasta el dia de hoy.
-          En estos momentos me encuentro en busqueda de una oportunidad para demostrar mis conocimientos
-          y poder seguir avanzando en mi camino como desarrollador.
-        </p>
-        <div fxLayoutAlign="start center">
-          <span class="text-bold">Skills:</span>
-          <a target="_blank" href="" mat-icon-button>
-            <mat-icon class="material-icons mr" color="accent"> <fa-icon [icon]="faHtml5"></fa-icon></mat-icon>
-          </a>
-          <a target="_blank" href="" mat-icon-button>
-            <mat-icon class="material-icons mr" color="accent"> <fa-icon [icon]="faCss3Alt"></fa-icon></mat-icon>
-          </a>
-          <a target="_blank" href="" mat-icon-button>
-            <mat-icon class="material-icons mr" color="accent"> <fa-icon [icon]="faSass"></fa-icon></mat-icon>
-          </a>
-          <a target="_blank" href="" mat-icon-button>
-            <mat-icon class="material-icons mr" color="accent"> <fa-icon [icon]="faBootstrap"></fa-icon></mat-icon>
-          </a>
-          <a target="_blank" href="" mat-icon-button>
-            <mat-icon class="material-icons mr" color="accent"> <fa-icon [icon]="faJs"></fa-icon></mat-icon>
-          </a>
-          <a target="_blank" href="" mat-icon-button>
-            <mat-icon class="material-icons mr" color="accent"> <fa-icon [icon]="faNode"></fa-icon></mat-icon>
-          </a>
-          <a target="_blank" href="" mat-icon-button>
-            <mat-icon class="material-icons mr" color="accent"> <fa-icon [icon]="faDigitalOcean"></fa-icon></mat-icon>
-          </a>
-        </div>
-      </mat-card-content>
-      <div fxLayoutAlign="start center">
-        <span class="text-bold"> Frameworks:</span>
+
+    <mat-card-content>
+      <p>
+        Hola soy David, desarrollador Front-end establecido en Madrid.
+        En los ultimos años me he formado en desarrollo de videojuegos donde aprendi modelado 3d,
+        texturizado, animacion y como no programacion en C# para Unity. Aqui fue donde me di cuenta
+        que el tiempo desaparecia cuando me involucraba en resolver un problema.
+        Entonces hace año y poco empeze a formame en App/Web y hasta el dia de hoy.
+        En estos momentos me encuentro en busqueda de una oportunidad para demostrar mis conocimientos
+        y poder seguir avanzando en mi camino como desarrollador.
+      </p>
+      <div class="skills">
+        <span class="text-bold">Skills:</span>
+        <a target="_blank" href="" mat-icon-button>
+          <mat-icon class="material-icons mr" color="accent"> <fa-icon [icon]="faHtml5"></fa-icon></mat-icon>
+        </a>
+        <a target="_blank" href="" mat-icon-button>
+          <mat-icon class="material-icons mr" color="accent"> <fa-icon [icon]="faCss3Alt"></fa-icon></mat-icon>
+        </a>
+        <a target="_blank" href="" mat-icon-button>
+          <mat-icon class="material-icons mr" color="accent"> <fa-icon [icon]="faSass"></fa-icon></mat-icon>
+        </a>
+        <a target="_blank" href="" mat-icon-button>
+          <mat-icon class="material-icons mr" color="accent"> <fa-icon [icon]="faBootstrap"></fa-icon></mat-icon>
+        </a>
+        <a target="_blank" href="" mat-icon-button>
+          <mat-icon class="material-icons mr" color="accent"> <fa-icon [icon]="faJs"></fa-icon></mat-icon>
+        </a>
+        <a target="_blank" href="" mat-icon-button>
+          <mat-icon class="material-icons mr" color="accent"> <fa-icon [icon]="faNode"></fa-icon></mat-icon>
+        </a>
         <a target="_blank" href="" mat-icon-button>
           <mat-icon class="material-icons mr" color="accent"> <fa-icon [icon]="faAngular"></fa-icon></mat-icon>
         </a>
         <a target="_blank" href="" mat-icon-button>
           <mat-icon class="material-icons mr" color="accent"> <fa-icon [icon]="faVue"></fa-icon></mat-icon>
         </a>
-      </div>
-      <div fxLayoutAlign="start center">
-        <span class="text-bold"> Herramientas:</span>
         <a target="_blank" href="" mat-icon-button>
           <mat-icon class="material-icons mr" color="accent"> <fa-icon [icon]="faGit"></fa-icon></mat-icon>
         </a>
@@ -60,8 +52,15 @@
           <mat-icon class="material-icons mr" color="accent"><fa-icon [icon]="['fab', 'github']"></fa-icon></mat-icon>
         </a>
       </div>
+    </mat-card-content>
+      <mat-card-actions>
+      </mat-card-actions>
+      <mat-card-footer>
+      </mat-card-footer>
     </mat-card>
-  <div class="container-icons">
+  </div>
+  <div fxLayoutAlign="center center">
+    <p>Contactos:</p>
     <a target="_blank" href="https://github.com/deividev" mat-icon-button>
       <mat-icon class="material-icons mr" color="primary"><fa-icon [icon]="['fab', 'github']"></fa-icon></mat-icon>
     </a>
