--- a/src/app/shared/components/cover/cover.component.scss
+++ b/src/app/shared/components/cover/cover.component.scss
@@ -1,18 +1,27 @@
 .cover {
-  height: 100vh;
-  padding: 75px 15px;
+  padding: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+.mat-drawer-container {
+  padding: 20px;
+}
+@media (min-width: 768px)  {
+  .mat-drawer-container {
+    height: 100vh;
+    padding: 50px;
+  }
+}
+
 .img-user {
   min-width: 50px;
-  min-height: 50px;
-  max-width: 150px;
-  min-width: 150px;
+  max-height: 100px;
+  max-width: 50px;
+  min-width: 100px;
   border-radius: 50%;
-  margin: 15px;
+  margin: 5px;
 }
 
 .container-icons {
@@ -23,9 +32,7 @@
 
 .mat-card {
   max-width: 1000px;
-  margin: 0 5px;
-  padding: 50px;
-  // background-color: ;
+  margin-bottom: 20px;
 }
 
 .mat-button-base {
@@ -37,11 +44,15 @@
   height: 60px;
 }
 
-.mat-icon.mat-primary:hover {
+.mat-icon:hover {
   color: #111;
   cursor: pointer;
 }
 
 .mat-icon {
   font-size: 50px;
+}
+
+.skills {
+  text-align: center;
 }
