--- a/src/app/features/about/card-about/card-about.component.scss
+++ b/src/app/features/about/card-about/card-about.component.scss
@@ -1,14 +1,14 @@
 .img-user {
   min-width: 50px;
-  min-height: 50px;
-  max-width: 150px;
-  min-width: 150px;
+  max-height: 100px;
+  max-width: 50px;
+  min-width: 100px;
   border-radius: 50%;
-  margin-bottom: 15px;
+  margin: 5px;
 }
 
 .mat-card {
-  max-width: 1000px;
+  max-width: 250px;
   margin-bottom: 20px;
 }
 
