Updates styles icon-skills

--- a/src/app/shared/components/cover/cover.component.html
+++ b/src/app/shared/components/cover/cover.component.html
@@ -19,8 +19,8 @@
         En estos momentos me encuentro en busqueda de una oportunidad para demostrar mis conocimientos
         y poder seguir avanzando en mi camino como desarrollador.
       </p>
+      <!-- <span class="text-bold">Skills:</span> -->
       <div class="skills">
-        <span class="text-bold">Skills:</span>
         <a target="_blank" href="" mat-icon-button>
           <mat-icon class="material-icons mr" color="accent"> <fa-icon [icon]="faHtml5"></fa-icon></mat-icon>
         </a>
@@ -60,7 +60,6 @@
     </mat-card>
   </div>
   <div fxLayoutAlign="center center">
-    <p>Contactos:</p>
     <a target="_blank" href="https://github.com/deividev" mat-icon-button>
       <mat-icon class="material-icons mr" color="primary"><fa-icon [icon]="['fab', 'github']"></fa-icon></mat-icon>
     </a>
