--- a/src/app/features/about/card-about/card-about.component.scss
+++ b/src/app/features/about/card-about/card-about.component.scss
@@ -8,8 +8,11 @@
 }
 
 .mat-card {
-  max-width: 250px;
+  max-width: 300px;
   margin-bottom: 20px;
+  @media (min-width: 768px)  {
+    max-width: 1000px;
+  }
 }
 
 .mat-expansion-panel {
