--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -69,6 +69,14 @@ $candy-app-dark-theme: mat-dark-theme((
   font-weight: bold;
 }
 
+.text-m {
+  font-size: 18px;
+}
+
+.text-s {
+  font-size: 15px;
+}
+
 .text-xs {
   font-size: 12px;
 }
