--- a/src/app/shared/components/cover/cover.component.html
+++ b/src/app/shared/components/cover/cover.component.html
@@ -1,16 +1,20 @@
 <section class="cover mat-drawer-container mat-typography">
   <mat-card class="mat-elevation-z4" color="primary">
-      <mat-card-header fxLayoutAlign="start center">
-        <mat-card-title>
-          <img class="img-user mat-elevation-z4" src="assets/img/circle-cropped.png">
-          <h1 class="text-primary"> David  seco diaz</h1>
-        </mat-card-title>
-      <mat-card-subtitle>Desarrolador Front-end</mat-card-subtitle>
+    <mat-card-header  fxLayoutAlign="start center">
+      <mat-card-title>
+        <img class="img-user mat-elevation-z4" src="assets/img/circle-cropped.png">
+      </mat-card-title>
+      <mat-card-subtitle>
+        <h1 class="text-primary"> David  seco diaz</h1>
+        <h3>Desarrolador Front-end</h3>
+      </mat-card-subtitle>
     </mat-card-header>
 
+
     <mat-card-content>
-      <p>
+      <p class="text-s">
         Hola soy David, desarrollador Front-end establecido en Madrid.
+
         En los ultimos años me he formado en desarrollo de videojuegos donde aprendi modelado 3d,
         texturizado, animacion y como no programacion en C# para Unity. Aqui fue donde me di cuenta
         que el tiempo desaparecia cuando me involucraba en resolver un problema.
