--- a/src/app/features/about/card-about/card-about.component.html
+++ b/src/app/features/about/card-about/card-about.component.html
@@ -1,15 +1,15 @@
 <div fxLayoutAlign="center center">
   <mat-card   class="mat-elevation-z4" color="primary">
-    <mat-card-header  fxLayoutAlign="center center">
-      <img class="img-user mat-elevation-z4" src="assets/img/circle-cropped.png">
+    <mat-card-header  fxLayoutAlign="start center">
       <mat-card-title>
-        <h1> Full stack developer </h1>
+        <img class="img-user mat-elevation-z4" src="assets/img/circle-cropped.png">
       </mat-card-title>
+      <mat-card-subtitle><h3>Desarrolador Front-end</h3></mat-card-subtitle>
     </mat-card-header>
 
 
     <mat-card-content>
-    <p>Sobre mi, amet consectetur adipisicing elit. Minima quia, commodi labore omnis neque culpa esse cum. Atque exercitationem soluta officiis libero, unde assumenda voluptate iure asperiores, fugiat repudiandae ullam?</p>
+    <p class="s">Sobre mi, amet consectetur adipisicing elit. Minima quia, commodi labore omnis neque culpa esse cum. Atque exercitationem soluta officiis libero, unde assumenda voluptate iure asperiores, fugiat repudiandae ullam?</p>
     <h2>Experiencia</h2>
     <mat-accordion class="mat-elevation-z4">
       <mat-expansion-panel  (opened)="panelOpenState = true"
@@ -28,10 +28,10 @@
       <p>Clone: Web App red social para subir y descargar imágenes.
       </p>
       <p>
-        -Front desarrollado con Html5, Sass, Angular9 ,
+        -Front desarrollado con Html5, Sass, Angular9.
       </p>
       <p>
-        -Back desarrollado con Srtrapi(cms), con test unitarios utilizando Jasmine.js y con test End-to-End con Cypress.js.
+        -Back desarrollado con Srtrapi(cms), con test unitarios utilizando Karma.js y con test End-to-End con Cypress.js.
       </p>
       </mat-expansion-panel>
     </mat-accordion>
@@ -57,21 +57,6 @@
       <mat-expansion-panel-header>
       <mat-panel-title class="text-bold">
         My interest
-      </mat-panel-title>
-      <mat-panel-description>
-        Currently I am
-      </mat-panel-description>
-      </mat-expansion-panel-header>
-        <p>I'm visible because I am open</p>
-      </mat-expansion-panel>
-    </mat-accordion>
-    <h2>Mis hobbies</h2>
-    <mat-accordion class="mat-elevation-z4">
-      <mat-expansion-panel  (opened)="panelOpenState = true"
-                          (closed)="panelOpenState = false">
-      <mat-expansion-panel-header>
-      <mat-panel-title class="text-bold">
-        My Hobbies
       </mat-panel-title>
       <mat-panel-description>
         Currently I am
