Added email icon

--- a/src/app/shared/components/cover/cover.component.html
+++ b/src/app/shared/components/cover/cover.component.html
@@ -66,6 +66,9 @@
     <a target="_blank" href="https://github.com/deividev" mat-icon-button>
       <mat-icon class="material-icons mr" color="primary"><fa-icon [icon]="['fab', 'github']"></fa-icon></mat-icon>
     </a>
+    <a target="_blank" onclick="window.location='mailto:deivid.develop@gmail.com'" mat-icon-button>
+      <mat-icon class="material-icons mr" color="primary"><fa-icon [icon]="['far', 'envelope']"></fa-icon></mat-icon>
+    </a>
     <a target="_blank" href="https://www.linkedin.com/in/deividev/" mat-icon-button>
       <mat-icon class="material-icons mr" color="primary"> <fa-icon [icon]="['fab', 'linkedin']"></fa-icon></mat-icon>
     </a>
