Update styles expansion-panels

--- a/src/app/features/about/card-about/card-about.component.html
+++ b/src/app/features/about/card-about/card-about.component.html
@@ -16,10 +16,10 @@
                             (closed)="panelOpenState = false">
       <mat-expansion-panel-header>
       <mat-panel-title class="text-bold">
-        Boream
+        Frontend Developer
       </mat-panel-title>
       <mat-panel-description>
-        <p>Frontend Developer 2020-2020</p>
+        Boream 2020-2020
       </mat-panel-description>
       </mat-expansion-panel-header>
       <p>Web development bootcamp using HTML5, Javascript Css, Sass, Git, Angular8, Koa, Express,
