Added shadow at footer

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="footer"  fxLayout fxLayoutAlign="center end">
+<mat-toolbar class="footer mat-elevation-z4"  fxLayout fxLayoutAlign="center end">
   <div fxFlex>
     <p class="text-xs">Made with angular</p>
   </div>
