Added shadow at header

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar fxLayout="row">
+<mat-toolbar class="mat-elevation-z4" fxLayout="row">
   <div fxFlex>
     <a mat-button routerLink="/home">
       <h2>Deividev</h2>
